src/objects/Update_Tracking__c.object
<CustomObject>
    <description>Used by content manager to track updates in projects</description>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Update Tracking</relationshipLabel>
        <relationshipName>Update_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Update Tracking</label>
    <nameField>
        <displayFormat>Upd-{00000000}</displayFormat>
        <label>Update Tracking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Update Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>